# diashow-rs

./: .gitignore  Cargo.toml  Readme.md  build.rs  flake.nix
.direnv/: flake-profile-2-link
src/: cli.rs  main.rs
