[package]
name = "diashow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
eframe = "0.28.1"
egui_extras = { version = "*", features = ["all_loaders"] }
glob = "0.3.1"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "rayon"] }
notify = "6.1.1"
rayon = "1.10.0"
